added most item definitions, models, recolored textures, and changing some code

--- a/src/main/resources/assets/rose_gold/lang/en_us.json
+++ b/src/main/resources/assets/rose_gold/lang/en_us.json
@@ -15,6 +15,6 @@
   "item.rose_gold.rose_gold_boots": "Rose Gold Boots",
   "item.rose_gold.rose_gold_horse_armor": "Rose Gold Horse Armor",
   "item.rose_gold.rose_gold_smithing_upgrade_template": "Rose Gold Upgrade Smithing Template",
-  "block.rose_gold.rose_gold_block": "Block of Rose Gold",
-  "block.rose_gold.raw_rose_gold_block": "Block of Raw Rose Gold"
+  "item.rose_gold.rose_gold_block": "Block of Rose Gold",
+  "item.rose_gold.raw_rose_gold_block": "Block of Raw Rose Gold"
 }
