I've changed alot and added a bunch of new stuff it's no where near done but I'm beat

--- a/src/main/resources/assets/rose_gold/lang/en_us.json
+++ b/src/main/resources/assets/rose_gold/lang/en_us.json
@@ -4,17 +4,16 @@
   "item.rose_gold.rose_gold_nugget": "Rose Gold Nugget",
   "item.rose_gold.rose_gold_apple": "Rose Gold Apple",
   "item.rose_gold.rose_gold_carrot": "Rose Gold Carrot",
-  "item.rose_gold.rose_gold_sword_iron": "Rose Gold Sword (Tier 1)",
-  "item.rose_gold.rose_gold_axe_iron": "Rose Gold Axe (Tier 1)",
-  "item.rose_gold.rose_gold_pickaxe_iron": "Rose Gold Pickaxe (Tier 1)",
-  "item.rose_gold.rose_gold_shovel_iron": "Rose Gold Shovel (Tier 1)",
-  "item.rose_gold.rose_gold_hoe_iron": "Rose Gold Hoe (Tier 1)",
-  "item.rose_gold.rose_gold_helmet_iron": "Rose Gold Helmet (Tier 1)",
-  "item.rose_gold.rose_gold_chestplate_iron": "Rose Gold Chestplate (Tier 1)",
-  "item.rose_gold.rose_gold_leggings_iron": "Rose Gold Leggings (Tier 1)",
-  "item.rose_gold.rose_gold_boots_iron": "Rose Gold Boots (Tier 1)",
+  "item.rose_gold.rose_gold_iron_sword": "Rose Gold Iron Sword",
+  "item.rose_gold.rose_gold_iron_axe": "Rose Gold Iron Axe",
+  "item.rose_gold.rose_gold_iron_pickaxe": "Rose Gold Iron Pickaxe",
+  "item.rose_gold.rose_gold_iron_shovel": "Rose Gold Iron Shovel",
+  "item.rose_gold.rose_gold_iron_hoe": "Rose Gold Iron Hoe",
+  "item.rose_gold.rose_gold_iron_helmet": "Rose Gold Iron Helmet",
+  "item.rose_gold.rose_gold_iron_chestplate": "Rose Gold Iron Chestplate",
+  "item.rose_gold.rose_gold_iron_leggings": "Rose Gold Iron Leggings",
+  "item.rose_gold.rose_gold_iron_boots": "Rose Gold Iron Boots",
   "item.rose_gold.rose_gold_horse_armor": "Rose Gold Horse Armor",
-  "item.rose_gold.rose_gold_iron_smithing_upgrade_template": "Rose Gold Iron Upgrade Smithing Template",
   "item.rose_gold.rose_gold_diamond_smithing_upgrade_template": "Rose Gold Diamond Upgrade Smithing Template",
   "item.rose_gold.rose_gold_netherite_smithing_upgrade_template": "Rose Gold Netherite Upgrade Smithing Template",
   "item.rose_gold.rose_gold_block": "Block of Rose Gold",
